--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
   "dependencies": {
     "discord": "^0.8.2",
-    "discord.js": "^14.8.0",
+    "discord.js": "^12.5.3",
     "node": "^19.8.1"
-  }
+  },
+  "name": "bot-discord---copia-2",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanielSaldana2002/bot-discord-mostochobot.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DanielSaldana2002/bot-discord-mostochobot/issues"
+  },
+  "homepage": "https://github.com/DanielSaldana2002/bot-discord-mostochobot#readme",
+  "description": ""
 }
